--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
    ],
    "source": [
     "# Create set A\n",
-    "A = (2, 4, 6, 8, 10)\n",
+    "A = set([x for x])\n",
     "'Type A: {}, A: {}'.format(type(A), A) # \"Type A: <class 'set'>, A: {2, 4, 6, 8, 10}\""
    ]
   },
