--- a/index.ipynb
+++ b/index.ipynb
@@ -64,23 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Type A: <class 'tuple'>, A: (2, 4, 6, 8, 10)\""
+       "\"Type A: <class 'set'>, A: {2, 4, 6, 8, 10}\""
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create set A\n",
-    "A = set([2,])\n",
+    "A = set([2,4,6,8,10])\n",
     "'Type A: {}, A: {}'.format(type(A), A) # \"Type A: <class 'set'>, A: {2, 4, 6, 8, 10}\""
    ]
   },
