--- a/index.ipynb
+++ b/index.ipynb
@@ -86,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type B: <class 'set'>, B: {8, 11, 3, 12}\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set B\n",
     "B = set([3,8,11,12])\n",
@@ -102,7 +113,7 @@
    "outputs": [],
    "source": [
     "# Create set C\n",
-    "C = None\n",
+    "C = \n",
     "'Type C: {}, C: {}'.format(type(C), C) # \"Type C: <class 'set'>, C: {2, 3, 6, 8, 9, 11}\""
    ]
   },
