--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "# Create set C\n",
-    "C = \n",
+    "C = set([2,3,6,8,9,11])\n",
     "'Type C: {}, C: {}'.format(type(C), C) # \"Type C: <class 'set'>, C: {2, 3, 6, 8, 9, 11}\""
    ]
   },
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Create universal set U\n",
-    "U = None\n",
+    "U = set([1,2,3])\n",
     "'Type U: {}, U: {}'.format(type(U), U) # \"Type U: <class 'set'>, U: {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12}\""
    ]
   },
