Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_comp = \n",
+    "A_comp = U - \n",
+    "A\n",
     "A_comp # {1, 3, 5, 7, 9, 11, 12}"
    ]
   },
