--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B_inters_C_comp = None\n",
+    "B_inters_C_comp = b -\n",
     "B_inters_C_comp # {12}"
    ]
   },
