--- a/index.ipynb
+++ b/index.ipynb
@@ -315,11 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 6, 10}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "compl_of_B = A\n",
+    "compl_of_B = A-B\n",
     "compl_of_B # {2, 4, 6, 10}"
    ]
   },
