--- a/index.ipynb
+++ b/index.ipynb
@@ -343,11 +343,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "C_compl_B_compl_A = None\n",
+    "C_compl_B_compl_A = C - (B-A)\n",
     "C_compl_B_compl_A # {2, 6, 8, 9}"
    ]
   },
