--- a/index.ipynb
+++ b/index.ipynb
@@ -422,9 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "left_hand_eq = len(A | B | C)\n",
     "print(left_hand_eq)  # 9 elements in the set"
@@ -436,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "right_hand_eq = None\n",
+    "right_hand_eq = \n",
     "print(right_hand_eq) # 9 elements in the set"
    ]
   },
