--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None\n",
+    "Eve.remove(turtle)\n",
     "Eve # should be {'Rabbit', 'Goldfish'}"
    ]
   },
