Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -519,11 +519,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Goldfish', 'Rabbit'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Eve.remove(turtle)\n",
+    "Eve.remove('Turtle')\n",
     "Eve # should be {'Rabbit', 'Goldfish'}"
    ]
   },
