--- a/index.ipynb
+++ b/index.ipynb
@@ -615,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None\n",
+    "n_species_Nina = len()\n",
     "n_species_Nina # 9"
    ]
   },
